# programming-praxis-cpp

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakegtest.txt  Dockerfile  Dockerfile.build  README.md  bitbucket-pipelines.yml
rpncalculator/: CMakeLists.txt
rpncalculator/src/: CMakeLists.txt  CalcResult.cpp  CalcResult.def  CalcResult.h  Operator.cpp  Operator.h  RpnCalculator.cpp  RpnCalculator.h  rpncmain.cpp
rpncalculator/test/: CMakeLists.txt  rpnctest.cpp
rpncalculator/tests/: CMakeLists.txt  rpnctest.cpp
